--- a/uuid.rc
+++ b/uuid.rc
@@ -3,4 +3,6 @@
        uuid = "3ef20bf5-f609-4c96-bfb5-8e617274e705")];
 #[crate_type = "lib"];
 
-use std;
+extern mod std;
+
+use from_str::FromStr;
