--- a/src/uuid.rc
+++ b/src/uuid.rc
@@ -2,7 +2,10 @@
        vers = "0.1pre",
        uuid = "3ef20bf5-f609-4c96-bfb5-8e617274e705")];
 #[crate_type = "lib"];
+#[no_core];
 
-extern mod std;
+extern mod core(vers = "0.5");
+extern mod std(vers = "0.5");
 
-use from_str::FromStr;
+use core::*;
+use from_str::{FromStr, ToStr};
