--- a/uuid.rc
+++ b/uuid.rc
@@ -8,15 +8,15 @@ extern mod std;
 #[cfg(target_os = "macos")]
 #[nolink]
 extern mod uuid {
-    fn uuid_generate(out: UUID);
-    fn uuid_generate_random(out: UUID);
-    fn uuid_generate_time(out: UUID);
+    fn uuid_generate(out: &mut UUID);
+    fn uuid_generate_random(out: &mut UUID);
+    fn uuid_generate_time(out: &mut UUID);
 
-    fn uuid_parse(s: *u8, uuid: UUID) -> libc::c_int;
+    fn uuid_parse(s: *u8, uuid: &UUID) -> libc::c_int;
 
-    fn uuid_unparse(uuid: UUID, out: *u8);
-    fn uuid_unparse_lower(uuid: UUID, out: *u8);
-    fn uuid_unparse_upper(uuid: UUID, out: *u8);
+    fn uuid_unparse(uuid: &UUID, out: *u8);
+    fn uuid_unparse_lower(uuid: &UUID, out: *u8);
+    fn uuid_unparse_upper(uuid: &UUID, out: *u8);
 }
 
 #[cfg(target_os = "linux")]
@@ -69,22 +69,22 @@ impl UUID: cmp::Ord {
 
 /// Create a new uuid
 pub fn UUID() -> UUID {
-    let uuid = UUID { a: 0u32, b: 0u32, c: 0u32, d: 0u32 };
-    uuid::uuid_generate(uuid);
+    let mut uuid = UUID { a: 0u32, b: 0u32, c: 0u32, d: 0u32 };
+    uuid::uuid_generate(&mut uuid);
     uuid
 }
 
 /// Create a uuid from the current time and mac address
 pub fn UUID_random() -> UUID {
-    let uuid = UUID { a: 0u32, b: 0u32, c: 0u32, d: 0u32 };
-    uuid::uuid_generate_random(uuid);
+    let mut uuid = UUID { a: 0u32, b: 0u32, c: 0u32, d: 0u32 };
+    uuid::uuid_generate_random(&mut uuid);
     uuid
 }
 
 /// Create a uuid from a random number generator
 pub fn UUID_time() -> UUID {
-    let uuid = UUID { a: 0u32, b: 0u32, c: 0u32, d: 0u32 };
-    uuid::uuid_generate_time(uuid);
+    let mut uuid = UUID { a: 0u32, b: 0u32, c: 0u32, d: 0u32 };
+    uuid::uuid_generate_time(&mut uuid);
     uuid
 }
 
@@ -93,7 +93,7 @@ pub impl UUID: to_str::ToStr {
     pure fn to_str() -> ~str {
         let mut s = str::with_capacity(36);
         do str::as_buf(s) |buf, _| {
-            unsafe { uuid::uuid_unparse(self, buf) };
+            unsafe { uuid::uuid_unparse(&self, buf) };
         }
         unsafe { str::raw::set_len(&mut s, 36u); }
         s
@@ -105,7 +105,7 @@ pub pure fn from_str(s: &str) -> Option<UUID> {
 
     let uuid = UUID { a: 0u32, b: 0u32, c: 0u32, d: 0u32 }; 
     let r = do str::as_buf(s) |buf, _len| {
-        unsafe { uuid::uuid_parse(buf, uuid) }
+        unsafe { uuid::uuid_parse(buf, &uuid) }
     };
 
     if r == 0 { Some(uuid) } else { None }
@@ -124,12 +124,15 @@ mod test {
     fn test_valid() {
         for uint::range(0u, 100000u) |_i| {
             let uuid = UUID();
+            assert uuid.a != 0 && uuid.b != 0 && uuid.c != 0 && uuid.d != 0;
             assert from_str(uuid.to_str()) == Some(uuid);
 
             let uuid = UUID_random();
+            assert uuid.a != 0 && uuid.b != 0 && uuid.c != 0 && uuid.d != 0;
             assert from_str(uuid.to_str()) == Some(uuid);
 
             let uuid = UUID_time();
+            assert uuid.a != 0 && uuid.b != 0 && uuid.c != 0 && uuid.d != 0;
             assert from_str(uuid.to_str()) == Some(uuid)
         }
     }
